Corrected Bold Issue in JLB

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	</ul>
 <!-- JLB -->
 <p>
-	<b>Account Manager,/b><br>
+	<b>Account Manager</b><br>
 		JL Buchanan, Inc., Minneapolis MN<br>
 		October 2006 to May 2009</p>
 		<ul style="list-style-type: square">
