--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf">
   <title>Jim's Prime Resume</title>
-</head>
+	<link rel="stylesheet" type"text/css" href="styleeheet.css">
+	</head>
 <body>
 <div class="contact_block">
 	<p>
