Name to header 1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="contact_block">
 	<p>
-		<b>Jim Talarski</b><br>
+		<h1>Jim Talarski</h1><br>
 		Minneapolis, MN<br>
 		612.281.3772<br>
 		Email: jtalarski@gmail.com<br>
