stopped for aldi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" type"text/css" href="styleeheet.css">
 	</head>
 <body>
-<div class="contact_block">
+<div class="big_box">
+	<div class="contact_block">
 	<p>
 		<h1>Jim Talarski</h1><br>
 		Minneapolis, MN<br>
@@ -97,6 +98,6 @@
 			financial planning/forecasting tools.  Demonstrated ability to learn and
 			 become proficient in new technologies and applications.</p>
 	</div>
-
+	</div>
 	</body>
 </html>
