--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		Minneapolis, MN<br>
 		612.281.3772<br>
 		Email: jtalarski@gmail.com<br>
-		Linkedin: linkedin.com/in/jim-talarski
+		Linkedin: linkedin.com/in/jim-talarski</p>
+	</div>
 <div class="section_head">
 	<h3>SUMMARY</h3>
 </div>
