fixed link to style sheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf">
   <title>Jim's Prime Resume</title>
-	<link rel="stylesheet" type"text/css" href="styleeheet.css">
+	<link rel="stylesheet" type="text/css" href="styleeheet.css">
 	</head>
 <body>
 <div class="big_box">
