Are we done yet

--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
 	<link rel="stylesheet" type="text/css" href="styleeheet.css">
 	</head>
 <body>
-<div class="big_box">
-		<p>
+<div id="bigbox">		
+	<p>
 		<h1>Jim Talarski</h1><br>
 		Minneapolis, MN<br>
 		612.281.3772<br>
 		Email: jtalarski@gmail.com<br>
 		Linkedin: linkedin.com/in/jim-talarski</p>
-<div class="section_head">
+
 	<h3>SUMMARY</h3>
-</div>
 <p>I offer diverse analytical, leadership, logistics, relationship building, and customer service experience. I have broad experience in the grocery retail channel with a proven track record of helping businesses grow, assisting teams to form, and ultimately perform. I have a passion for process improvement and team development.
 <hr>
 </p>
 
-<div class="section_head">
+
 	<h3>PROFESSIONAL EXPERIENCE</h3>
-</div>
+
 <!-- Self -->
 <p>
 	<b>Project Support Volunteer</B><br>
@@ -86,13 +85,13 @@
 			<li>Managed the agency’s proprietary SQL-based order and sales tracking 
 				application.</li>
 </ul>
-<div class="section_head">
+
 <h3>EDUCATION</h3>
-	</div>
+
 <p>Bachelor of Arts in Technical Communication, Metropolitan State University, St. Paul,MN</p>
-	<div class="section_head">
+	
 		<h3>COMPUTER SKILLS</h3>
-</div>
+
 		<p>Advanced user of Microsoft Office.  Experience with syndicated data
 			services (Nielsen, SPINS) and various proprietary merchandise and
 			financial planning/forecasting tools.  Demonstrated ability to learn and
