--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf">
-  <title>Jim's Prime Resume</title>
-	<link rel="stylesheet" type="text/css" href="styleeheet.css">
+	<head>
+		<meta charset="utf8">
+		<title>Jim'r Prime Resume</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 	</head>
-<body>
-<div id="bigbox">		
-	<p>
+	<body>
+<div id="bigbox">
+<div id="myname">
+<p>
 		<h1>Jim Talarski</h1><br>
-		Minneapolis, MN<br>
+		<b>Minneapolis, MN<br>
 		612.281.3772<br>
 		Email: jtalarski@gmail.com<br>
-		Linkedin: linkedin.com/in/jim-talarski</p>
-
+		Linkedin: linkedin.com/in/jim-talarski</b>
+		<br>
+</div>
+<div id="sectionhead">
 	<h3>SUMMARY</h3>
+</div>
 <p>I offer diverse analytical, leadership, logistics, relationship building, and customer service experience. I have broad experience in the grocery retail channel with a proven track record of helping businesses grow, assisting teams to form, and ultimately perform. I have a passion for process improvement and team development.
 <hr>
+<hr>
 </p>
-
-
+<div id="sectionhead">
 	<h3>PROFESSIONAL EXPERIENCE</h3>
-
+</div>
 <!-- Self -->
 <p>
 	<b>Project Support Volunteer</B><br>
 		Consultant
 		March 2019 to May 2020
-		<ul style="list-style-type: square">
+		<ul>
 			<li>Offered my skills and experiences to local non-profits, assist with fundraising campaigns and event planning.</li>
 			<li>Used primary skills. Project planning, needs analysis, customer service, and financial document review.</li>
 		</ul>
@@ -37,7 +41,7 @@
 	<b>Analyst</b><br>
 		National Coop Grocers (NCG) St. Paul, MN<br>
 		January 2011 to March 2019</p>
-<ul style="list-style-type: square">
+<ul>
 	<li>Provided scheduled and ad-hoc analysis and insights to the company’s
 		purchasing and supplier programs teams. Analysis led to increases in revenue,
 		 gains in member participation, and improved vendor relationships.</li>
@@ -54,7 +58,7 @@
 	<b>On-site Business Consultant to NCG</b><br>
 		SPINS, LLC Schaumburg IL<br>
 		October 2009 to January 2011</P>
-<ul style="list-style-type: square">
+<ul>
 	<li>Developed and presented a series of training modules focused on improving
 		the capabilities of NCG members to access SPINS syndicated data and understand
 		standard fact measures and conduct assortment reviews.</li>
@@ -68,34 +72,17 @@
 		business practices as part of SPINS Strategic On-Site Consulting team.</li>
 	</ul>
 <!-- JLB -->
-<p>
-	<b>Account Manager</b><br>
-		JL Buchanan, Inc., Minneapolis MN<br>
-		October 2006 to May 2009</p>
-		<ul style="list-style-type: square">
-			<li>Managed merchandise program implementations in Target Stores on behalf
-			of assigned manufacturers.</li>
-			<li>Coordinated programs through all phases: trend inception, bidding, 
-				business award, item setup, shipping, in-season maintenance, promotion, 
-				and clearance.</li>
-			<li>Collaborated with Target Business Analysts to develop average sales 
-				projections and replenishment profiles.   </li>
-			<li>Used IRI and Nielson national sales data to compile category market 
-				share reports.</li>
-			<li>Managed the agency’s proprietary SQL-based order and sales tracking 
-				application.</li>
-</ul>
-
-<h3>EDUCATION</h3>
-
+<div id="sectionhead">
+		<h3>EDUCATION</h3>
+</div>
 <p>Bachelor of Arts in Technical Communication, Metropolitan State University, St. Paul,MN</p>
-	
+<div id="sectionhead">
 		<h3>COMPUTER SKILLS</h3>
-
+	</div>
 		<p>Advanced user of Microsoft Office.  Experience with syndicated data
 			services (Nielsen, SPINS) and various proprietary merchandise and
 			financial planning/forecasting tools.  Demonstrated ability to learn and
 			 become proficient in new technologies and applications.</p>
-	</div>
+</div>
 	</body>
 </html>
