--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf8">
-		<title>Jim'r Prime Resume</title>
+		<title>Jim's Prime Resume</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 	</head>
 	<body>
