--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		Consultant
 		March 2019 to May 2020
 		<ul>
-			<li>Offered my skills and experiences to local non-profits, assist with fundraising campaigns and event planning.</li>
+			<li>Offered my skills and experiences to local non-profits, assisted with fundraising campaigns and event planning.</li>
 			<li>Used primary skills. Project planning, needs analysis, customer service, and financial document review.</li>
 		</ul>
 </p>
