--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		service contract establishing the company’s first Secret Shopper Program.
 		Managed the day-to-day relationship with the supplier and NCG retail store
 		staff, ensuring the success of the program.</li>
-	<li>Led a team that developed the company’s first vendor communications portal.
+	<li>Led a team that developed the company’s first web-based vendor communications portal.
 		This resulted in streamlined communication between management and vendor
 		partners.</li>
 	</ul>
