--- a/index.html
+++ b/index.html
@@ -72,7 +72,19 @@
 		business practices as part of SPINS Strategic On-Site Consulting team.</li>
 	</ul>
 <!-- JLB -->
-<div id="sectionhead">
+<p>
+	<b>Account Manager</b><br>
+	JL Buchanan, Inc. Minneapolis MN<br>
+	October 2006 to May 2009<p>
+	<ul>
+		<li>Managed merchandise implementation in Target Stores on behalf of assigned
+			manufacturers.</li>
+		<li>Collaborated with Business Analysts to develop sales projections and order
+			replenishment profiles.</li>
+		<li>Used IRI and Nielson national sales data to compile category market share reports.</li>
+		<li>Managed the agency's proprietary SQL-based order and sales tracking application.</li>
+	</ul>
+			<div id="sectionhead">
 		<h3>EDUCATION</h3>
 </div>
 <p>Bachelor of Arts in Technical Communication, Metropolitan State University, St. Paul,MN</p>
