--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	JL Buchanan, Inc. Minneapolis MN<br>
 	October 2006 to May 2009<p>
 	<ul>
-		<li>Managed merchandise implementation in Target Stores on behalf of assigned
+		<li>Managed merchandising program implementation in Target Stores on behalf of assigned
 			manufacturers.</li>
 		<li>Collaborated with Business Analysts to develop sales projections and order
 			replenishment profiles.</li>
