--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Self -->
 <p>
 	<b>Project Support Volunteer</B><br>
-		Consultant
+		Consultant, Minneapolis MN
 		March 2019 to May 2020
 		<ul>
 			<li>Offered my skills and experiences to local non-profits, assisted with fundraising campaigns and event planning.</li>
@@ -39,7 +39,7 @@
 <!-- NCG -->
 <p>
 	<b>Analyst</b><br>
-		National Coop Grocers (NCG) St. Paul, MN<br>
+		National Coop Grocers (NCG), St. Paul MN<br>
 		January 2011 to March 2019</p>
 <ul>
 	<li>Provided scheduled and ad-hoc analysis and insights to the company’s
@@ -56,7 +56,7 @@
 <!-- SPINS -->
 <p>
 	<b>On-site Business Consultant to NCG</b><br>
-		SPINS, LLC Schaumburg IL<br>
+		SPINS, LLC, Schaumburg IL<br>
 		October 2009 to January 2011</P>
 <ul>
 	<li>Developed and presented a series of training modules focused on improving
@@ -74,7 +74,7 @@
 <!-- JLB -->
 <p>
 	<b>Account Manager</b><br>
-	JL Buchanan, Inc. Minneapolis MN<br>
+	JL Buchanan, Inc., Minneapolis MN<br>
 	October 2006 to May 2009<p>
 	<ul>
 		<li>Managed merchandising program implementation in Target Stores on behalf of assigned
@@ -87,7 +87,7 @@
 			<div id="sectionhead">
 		<h3>EDUCATION</h3>
 </div>
-<p>Bachelor of Arts in Technical Communication, Metropolitan State University, St. Paul,MN</p>
+<p>Bachelor of Arts in Technical Communication, Metropolitan State University, St. Paul MN</p>
 <div id="sectionhead">
 		<h3>COMPUTER SKILLS</h3>
 	</div>
