--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<h1>Jim Talarski</h1><br>
 		<b>Minneapolis, MN<br>
 		612.281.3772<br>
-		Email: jtalarski@gmail.com<br>
-		Linkedin: linkedin.com/in/jim-talarski</b>
+		Email: <a href="mailto:jtalarski@gmail.com">jtalarski@gmail.com<br></a>
+		Linkedin: <a href="http:///www.linkedin.com/in/jim-talarski" target="_blank">linkedin.com/in/jim-talarski</b></a>
 		<br>
 </div>
 <div id="sectionhead">
