--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Self -->
 <p>
 	<b>Project Support Volunteer</B><br>
-		Consultant, Minneapolis MN
+		Consultant, Minneapolis MN<br>
 		March 2019 to May 2020
 		<ul>
 			<li>Offered my skills and experiences to local non-profits, assisted with fundraising campaigns and event planning.</li>
