See if I resync

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<p>Advanced user of Microsoft Office.  Experience with syndicated data
 			services (Nielsen, SPINS) and various proprietary merchandise and
 			financial planning/forecasting tools.  Demonstrated ability to learn and
-			 become proficient in new technologies and applications.</p>
+			 become proficient with new technologies and applications.</p>
 </div>
 	</body>
 </html>
