--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		standard fact measures and conduct assortment reviews.</li>
 	<li>Compiled custom reports for NCG members while consulting one-on-one with
 		retail store staff to deepen their understanding of the data and its
-		implications to their business</li>
+		implications to their business.</li>
 	<li>Fulfilled ad-hoc reporting requests from client adding personal insights
 		to make the data more accessible and relevant.</li>
 	<li>Contributed to the design, development, and implementation of a new
