--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		612.281.3772<br>
 		Email: <a href="mailto:jtalarski@gmail.com">jtalarski@gmail.com<br></a>
 		Linkedin: <a href="http:///www.linkedin.com/in/jim-talarski" target="_blank">linkedin.com/in/jim-talarski</b></a>
+	    	Github: <a href="https://github.com/jtalarski" target="_blank">github.com/jtalarski</a>
 		<br>
     </div>
     <div class="blurb">
