--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<b>Minneapolis, MN<br>
 		612.281.3772<br>
 		Email: <a href="mailto:jtalarski@gmail.com">jtalarski@gmail.com<br></a>
-		Linkedin: <a href="http:///www.linkedin.com/in/jim-talarski" target="_blank">linkedin.com/in/jim-talarski</b></a>
+		Linkedin: <a href="http:///www.linkedin.com/in/jim-talarski" target="_blank">linkedin.com/in/jim-talarski</b><br></a>
 	    	Github: <a href="https://github.com/jtalarski" target="_blank">github.com/jtalarski</a>
 		<br>
     </div>
