demoted project bubbles and changed to gainsboro

--- a/index.html
+++ b/index.html
@@ -10,38 +10,36 @@
   <div id="bigbox">
     <div id="myname">
         <h1>Jim Talarski</h1><br>
-		<b>Minneapolis, MN<br>
+		<div class="contact"><b>Minneapolis, MN<br>
 		Linkedin: <a href="http:///www.linkedin.com/in/jim-talarski" target="_blank">linkedin.com/in/jim-talarski<br></a>
 			Github: <a href="https://github.com/jtalarski" target="_blank">github.com/jtalarski</b></a>
-		<br>
+        <br>
+    </div>
     </div>
     <div class="blurb">
         <h2>About Me</h2>
     </div>
     <div class="blurbBubble">
-        <p>If you knew me, you would know that I never shy away from a challenge in my career. I have been fortunate enough to work with incredible companies in some interesting markets.
-            I worked for a company that sold consumer products to jail and prison commissaries. I was a member of the team that created a point-of-sale and stock reservation system for a furniture company. I worked with a business cooperative that supported natural food stores across the country. There are a few more, but I think that you get the picture.
+        <p>If you knew me, you would know that I never shy away from challenging opportunities in my career.  Some of those opportunities came while working with companies that occupied niches in diverse, interesting markets. Those companies include one that sold consumer products to jail and prison commissaries, a team that created a point-of-sale and stock reservation system for furniture stores, and a business cooperative that supported community-owned natural food stores across the country. 
             </p>
         <p>
-            My latest challenge is transitioning to a career as a software development engineer. To do this I started training with Prime  Academy in Minneapolis. Prime's approach to training people is a 20 week, intensive and immersive program in which students learn some of the most current and relative technologies and methodologies. At prime I studied JavaScript, jQuery, React, Express, Node, AJAX and Python.
+            My latest challenge is transitioning to a career as a software development engineer. To do this I started training with Prime Digital Academy in Minneapolis. Prime's approach to training people is a 20 week, intensive and immersive program in which students learn some of the most current and relative technologies and methodologies. At Prime I studied JavaScript, jQuery, React, Express, Node, AJAX and Python.
         </p>
     </div>
     <div class="blurb">
         <h2>Recent Development Projects</h2>
     </div>
-    <div class="blurbBubble">
+    <div class="blurbBubble2">
         <p>
             watchUwatch is a full-stack application that allows a group of invited users (aka friends) to share lists of streaming media that interest them. The goal for the app is to keep a group of friends apprised of each other’s current streaming perferences for purposes of finding new media to watch themselves and to generate group discussion.  
         </p>
-        <p>
-            Users who log into the app will be able to browse for new movies to add to their queue,  update the status of their movie watching from “queued”, or “watching” through to “watched” as well as to delete older movies. Users will also be able to view other users’ movie queues with read only access.  
-        </p>
+
         <p>
             Check out my code on Github <a class="whiteURL" href="https://github.com/jtalarski/solo-spike-api" target="_blank">watchUwatch</a>
         </p>
     </div>
-    <div class="blurbBubble">
-        <p>My Classic To-Do List. The to-do list is a staple of any budding developer's portfolio. For my to-do list I used JavaScript, jQuery, Express, AJAX and SQL. My app is deployed on Heroku <a class="whiteURL" href="https://thawing-atoll-79103.herokuapp.com" target="_blank">Jim's To-DO List</a>
+    <div class="blurbBubble2">
+        <p>My Classic To-Do List. The to-do list is a staple of any budding developer's portfolio. For my to-do list I used JavaScript, jQuery, Express, AJAX and SQL.</p><p> My app is deployed on Heroku <a class="whiteURL" href="https://thawing-atoll-79103.herokuapp.com" target="_blank">Jim's To-DO List</a>
         </p>
     </div>
 
