added noreferrer rel to link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <ul>
         <li>
-            <a href="./odin-recipes/index.html">First Odin Recipe Page</a>
+            <a href="./odin-recipes/index.html" rel="noreferrer">First Odin Recipe Page</a>
         </li>
       </ul>
     </main>
